k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pcc-puppet-collection-guru-deployment
  namespace: pcc-puppet-enforcer
  labels:
    app: pcc-puppet-collection-guru-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pcc-puppet-collection-guru-deployment
  template:
    metadata:
      name: pcc-puppet-collection-guru-deployment
      labels:
        app: pcc-puppet-collection-guru-deployment
      annotations:
        linkerd.io/inject: enabled
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: pcc-registry
      containers:
        - name: pcc-puppet-collection-guru-container
          image: ghcr.io/pcc-puppet-enforcer/pcc-puppet-collection-guru:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9900
          readinessProbe:
            tcpSocket:
              port: 9900
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 10
            failureThreshold: 10
            successThreshold: 1
          livenessProbe:
            tcpSocket:
              port: 9900
            initialDelaySeconds: 15
            periodSeconds: 5
            timeoutSeconds: 10
            failureThreshold: 10
            successThreshold: 1
