k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pcc-puppet-collection-guru-service
  namespace: pcc-puppet-enforcer
spec:
  selector:
    app: pcc-puppet-collection-guru-deployment
  ports:
    - protocol: TCP
      port: 9900
