k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pcc-puppet-collection-guru-ingress
  namespace: pcc-puppet-enforcer
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /realm(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: pcc-puppet-collection-guru-service
                port:
                  number: 9900
